app/assets/stylesheets/components/message.scss
$app-body-text-line-height-default: get-govuk-typography-style($size: 19, $breakpoint: null, $property: "line-height");
$app-body-text-line-height-tablet: get-govuk-typography-style($size: 19, $breakpoint: tablet, $property: "line-height");

@mixin separator {
  display: inline-block;
  vertical-align: top;
  width: 20px;
  height: govuk-spacing(6);
  position: relative;

  &:before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    bottom: 1px;
    right: 7px;
    width: 9px;
    height: 9px;
    margin: auto 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    border: solid;
    border-width: 2px 2px 0 0;
    border-color: $govuk-secondary-text-colour;
  }
}

$govuk-touch-target-gutter: 4px;
$govuk-checkboxes-size: 40px;
$govuk-touch-target-size: ($govuk-checkboxes-size + $govuk-touch-target-gutter);
$govuk-checkboxes-label-padding-left-right: govuk-spacing(3);
$message-type-bottom-spacing: govuk-spacing(4);

a {

  &:hover .message-name-separator:before {
    border-color: $govuk-link-hover-colour;
  }

  .message-name-separator {

    margin-right: -2px;
    margin-left: -2px;

    &:before {
      border-color: $govuk-link-colour;
    }
  }

}

.message-name-separator {
  @include separator;
}

.template-list {

  &-item {
    margin-bottom: 0;

    &-with-checkbox {

      .template-list-item-hint {
        margin-top: 0;
        padding-left: ($govuk-checkboxes-label-padding-left-right + $govuk-touch-target-size);
      }

      input {
        margin-right: $govuk-checkboxes-label-padding-left-right;
        height: 1px;
      }
    }

    &-hidden-by-default {
      display: none;
    }

    &-without-ancestors {

      a {

        display: block;
        // block focus state for items that have no ancestors
        // our version of dart-sass (< 1.4.0 still parses calc() as a special function
        // so we need to interpolate it 
        // https://sass-lang.com/documentation/syntax/special-functions/#element-progid-and-expression
        width: calc(100% - #{$govuk-touch-target-size + $govuk-checkboxes-label-padding-left-right});

        &.template-list-folder:first-of-type {
          padding-left: 0;
          text-indent: 35px;

          @include govuk-media-query($from: tablet) {
            text-indent: 40px;
          }

        }

      }

      .template-list-template,
      .template-list-folder {
        height: fit-content;

        &::before {
          content: '';
          position: absolute;
          left: 0px;
          bottom: -1 * $app-body-text-line-height-default; /* extend link by line height of hint/meta so it covers it */
          width: 100%;
          height: $app-body-text-line-height-default;

          @include govuk-media-query($from: tablet) {
            bottom: -1 * $app-body-text-line-height-tablet - 5px;
            height: $app-body-text-line-height-tablet + 5px;
          }
        }

        &:focus {

          &,
          &::before {
            background-color: $govuk-focus-colour;
          }

          &,
          & + .template-list-item-hint,
          .message-type {
            color: $govuk-focus-text-colour;
          }

          &::before {
            box-shadow: 0px -2px $govuk-focus-colour, 0px 4px $govuk-focus-text-colour;
          }

        }

        & + .template-list-item-hint,
        & + .message-type {
          position: relative; /* needs to be non-static to have a z-index above the link :before element */
        }

      }

      // adjust for position being relative to a block-level element
      .template-list-folder__icon {
        top: 2px;

        @include govuk-media-query($from: tablet) {
          top: 3px;
        }
      }

    }

    &-label {
      position: absolute;
      left: 0;
      width: $govuk-checkboxes-size + $govuk-checkboxes-label-padding-left-right;
      top: 0;
      padding: 0;
      height: 100%;
    }

    // Fix for GOVUK Frontend selector with high precendence
    // https://github.com/alphagov/govuk-frontend/blob/v2.13.0/src/components/hint/_hint.scss
    &-label:not(.govuk-label--m):not(.govuk-label--l):not(.govuk-label--xl)+.template-list-item-hint {
      margin-bottom: $message-type-bottom-spacing;
    }

    &-hint {
      padding-left: 0;
      width: auto;
    }

  }

  &-folder,
  &-template {
    @include govuk-font($size: 24, $weight: bold, $line-height: 1.5);
    @include govuk-media-query($from: tablet) {
      line-height: 1.25;
    }
    vertical-align: top;
    position: relative; /* contain absolutely positioned icon and ::before element */
  }

  &-folder {

    display: inline;
    padding-left: 35px;

    @include govuk-media-query($from: tablet) {
      padding-left: 40px;
    }

    &__icon {

      position: absolute;
      top: 0;
      left: 0;

      @include govuk-media-query($from: tablet) {
        top: 3px;
      }

    }

  }

  &-template {
    a {
      display: inline;
    }
  }

  &-empty {
    color: $govuk-secondary-text-colour;
    padding: govuk-spacing(3) 0 govuk-spacing(2) 0;
  }
}

.checkbox-list {
  &-selected-counter {
    color: $govuk-secondary-text-colour;
    margin: govuk-spacing(3) 0;

    @include govuk-media-query($from: tablet) {
      position: absolute;
      right: 0;
      top: govuk-spacing(6) - 1px;
      margin: 0;
    }

    .content-fixed__bottom & {
      right: govuk-spacing(3);
    }
  }
}

.sticky-template-form {

  padding: govuk-spacing(3);
  margin: govuk-spacing(3) * -1;

  &:focus {
    outline: none;
  }

}

.folder-heading {

  .govuk-grid-row & {
    margin: govuk-spacing(3) 0 20px 0;
    word-wrap: break-word;
  }

  a,
  &-folder,
  &-subfolder {

    display: inline;
    vertical-align: top;
    position: relative;
    min-height: 30px;

  }

  &-folder {
    padding: 0 0 0 40px;
  }

  &-folder-truncated {
    width: 0;
    padding: 0 0 0 30px;
    white-space: nowrap;
    overflow: hidden;
    top: -2px; // adjust for effect of inline-block on content-height

    @include govuk-media-query($from: tablet) {
      top: auto;
    }
  }

  &-folder-root-truncated {
    max-width: 1.4em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  a {

    display: inline-block;
    vertical-align: top;

    &.folder-heading-folder {

      display: inline;
      overflow: hidden;
      text-overflow: ellipsis;

    }

    &.folder-heading-folder-truncated {
      display: inline-block;
    }

    &:hover {
      color: $govuk-link-hover-colour;
    }

  }

  &-separator {
    @include separator;
  }

  &-folder__icon {
    position: absolute;
    top: 0;
    left: 0;

    @include govuk-media-query($from: tablet) {
      top: 3px;
    }
  }

  &-manage-link {
    display: block;
    text-align: right;
    padding: govuk-spacing(4) 0 0 0;
    position: relative;
    top: -6px;
  }

}

